Customization in the code of the EP2